[package]
name = "alloy-reth-provider"
version = "1.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.86"
homepage = "https://github.com/paradigmxyz/alloy-reth-provider"
repository = "https://github.com/paradigmxyz/alloy-reth-provider"
exclude = [".github/"]
description = "Implement reth StateProviderFactory traits for remote RPC usage"

[dependencies]
async-trait = "0.1.86"
eyre = "0.6.12"
parking_lot = { version = "0.12.3", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"

# revm
revm = { version = "27.0.2", default-features = false, features = ["alloydb"] }
revm-context = { version = "8.0.2", default-features = false }
revm-database = { version = "7.0.1", default-features = false }
revm-state = { version = "7.0.1", default-features = false }

# alloy
alloy-consensus = { version = "1.0.18", default-features = false }
alloy-eips = { version = "1.0.18", default-features = false }
alloy-network = { version = "1.0.18", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false }
alloy-provider = { version = "1.0.18", default-features = false }
alloy-pubsub = { version = "1.0.18", default-features = false }
alloy-transport = { version = "1.0.18", default-features = false }

# eth-alloy
alloy-rpc-types-eth = { version = "1.0.18", default-features = false }

# op-alloy
op-alloy-network = { version = "0.18.7", default-features = false, optional = true }
op-alloy-rpc-types = { version = "0.18.7", default-features = false, optional = true }

# reth
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false, features = ["serde"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false, features = [
  "serde-bincode-compat",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }

# ethereum
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false, features = [
  "reth-codec",
] }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false }

# optimism
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false, optional = true }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", default-features = false, features = [
  "alloy-compat",
  "reth-codec",
  "serde",
  "serde-bincode-compat",
], optional = true }

[features]
optimism = ["op-alloy-network", "op-alloy-rpc-types", "reth-optimism-chainspec", "reth-optimism-primitives"]

[dev-dependencies]
alloy-eips = { version = "1.0.18", default-features = false, features = ["kzg"] }
alloy-node-bindings = "1.0.18"
alloy-provider = { version = "1.0.18", default-features = false, features = ["alloy-transport-ws", "reqwest", "reqwest-default-tls", "ws"] }
eyre = "0.6.12"
futures-util = "0.3.31"
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
ruint = "1.15.0"
test-with = { version = "0.15.1", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
